maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:7: error: reassignment to val
    setDirection=dir
                ^